attempting to fix full iphones picture on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -1166,7 +1166,7 @@ CUSTOM CSS STUFF
   }
 
   #tall_iphones {
-    height: 100%;
+    height: 13.5em;
     width: 100%;
   }
 
@@ -1250,7 +1250,7 @@ CUSTOM CSS STUFF
     }
 
     #tall_iphones {
-      height: 100%;
+      height: 13.5em%;
       width: 100%;
     }
 
